--- a/package.json
+++ b/package.json
@@ -12,48 +12,48 @@
 		"format": "prettier --write \"**/*.{md,y?(a)ml,json,vue}\""
 	},
 	"devDependencies": {
-		"@directus/sdk": "14.0.0",
-		"@directus/types": "11.0.3",
+		"@directus/sdk": "15.0.2",
+		"@directus/types": "11.0.7",
 		"@formkit/auto-animate": "1.0.0-beta.6",
-		"@headlessui/vue": "1.7.16",
-		"@iconify/json": "2.2.166",
+		"@headlessui/vue": "1.7.19",
+		"@iconify/json": "2.2.190",
 		"@nuxt/devtools": "^1.0.6",
-		"@nuxt/ui": "2.11.1",
+		"@nuxt/image": "1.4.0",
+		"@nuxt/ui": "2.14.2",
 		"@nuxtjs/color-mode": "3.3.2",
 		"@nuxtjs/eslint-config-typescript": "12.1.0",
 		"@nuxtjs/eslint-module": "4.1.0",
 		"@nuxtjs/google-fonts": "3.1.3",
-		"@nuxtjs/tailwindcss": "6.10.3",
-		"@stripe/stripe-js": "2.2.2",
+		"@nuxtjs/tailwindcss": "6.11.4",
+		"@stripe/stripe-js": "3.0.7",
 		"@tailwindcss/forms": "0.5.7",
 		"@tailwindcss/typography": "0.5.10",
-		"@types/uuid": "9.0.7",
-		"@vueuse/core": "10.7.1",
-		"@vueuse/motion": "2.0.0",
-		"@vueuse/nuxt": "10.7.1",
-		"eslint": "8.56.0",
+		"@types/uuid": "9.0.8",
+		"@vueuse/core": "10.9.0",
+		"@vueuse/motion": "2.1.0",
+		"@vueuse/nuxt": "10.9.0",
+		"eslint": "8.57.0",
 		"eslint-config-prettier": "9.1.0",
-		"eslint-plugin-prettier": "5.1.2",
-		"eslint-plugin-vue": "9.19.2",
-		"floating-vue": "2.0.0-beta.24",
+		"eslint-plugin-prettier": "5.1.3",
+		"eslint-plugin-vue": "9.22.0",
+		"floating-vue": "5.2.2",
 		"form-data": "4.0.0",
-		"jwt-decode": "3.1.2",
+		"jwt-decode": "4.0.0",
 		"micromark": "4.0.0",
 		"micromark-extension-gfm": "3.0.0",
 		"nuxt": "3.10.3",
-		"nuxt-icon": "0.6.8",
-		"nuxt-schema-org": "3.3.2",
-		"nuxt-simple-sitemap": "3.4.0",
-		"prettier": "3.1.1",
-		"stripe": "13.8.0",
-		"typescript": "5.3.3",
+		"nuxt-icon": "0.6.9",
+		"nuxt-schema-org": "3.3.5",
+		"nuxt-simple-sitemap": "4.4.1",
+		"prettier": "3.2.5",
+		"stripe": "14.20.0",
+		"typescript": "5.4.2",
 		"uuid": "9.0.1",
 		"v-perfect-signature": "1.4.0",
-		"vue-tsc": "1.8.27"
+		"vue-tsc": "2.0.6"
 	},
 	"dependencies": {
-		"@nuxt/image": "1.1.0",
-		"nuxt-og-image": "3.0.0-rc.23"
+		"nuxt-og-image": "3.0.0-rc.42"
 	},
 	"packageManager": "pnpm@8.6.0",
 	"engines": {
